Cascading Change Log

2.5.4 [unreleased]

  Updated c.t.p.PartitionCollector in c.t.p.BasePartitionTap to be public.

2.5.3

  Updated c.f.h.ProcessFlow to include missing status changes.

  Deprecated both c.t.l.TemplateTap and c.t.h.TemplateTap for the respective PartitionTap.

  Updated c.p.Pipe and c.p.SubAssembly to cache any resolved name as its own name to improve #hashCode() performance.

  Fixed issue where c.t.Fields#merge() did not honor underlying Fields type information properly.

  Fixed issue where c.t.Fields#getType() attempted to resolve position when there is no associated type information.

2.5.2

  Updated c.t.TupleEntryCollector javadoc to clarify re-use of c.t.Tuple instances.

  Updated c.t.h.Hfs to log a warning and disable o.a.h.m.l.CombineFileInputFormat (if enabled) if
  c.t.h.HfsProps#isCombineInputSafeMode is true but the current o.a.h.mapred.InputFormat is not
  a o.a.h.mapred.FileInputFormat.

  Updated c.p.h2.Hadoop2MR1Platform to return a name consistent with other resources and artifacts for Hadoop2 MR1.

  Fixed issue in c.o.f.Logic filter sub-classes where argumentFields was not properly set causing some nested
  c.o.Filter instances to fail.

2.5.1

  Updated c.t.h.Hfs to throw an exception if the o.a.h.m.l.CombineFileInputFormat is enabled but the wrapped
  o.a.h.mapred.InputFormat is not a o.a.h.mapred.FileInputFormat.

  Fixed issue in c.c.Cascade where a race condition during start/stop/complete could result in state exception.

  Updated Hadoop 1 platform tests to enable default num task retries.

2.5.0

  Updated c.f.BaseFlow to fail when deleting resources fails.

  Updated c.t.h.PartitionTap to append sequence numbers to part files to prevent filename collisions within a task.

  Added the c.f.FlowStepListener listener interface and subsequent listener support to c.f.FlowStep. @Ahmed--Mohsen

  Updated Hadoop 1 dependency to use Hadoop 1.2.1.
