@@ -2,6 +2,8 @@ Cascading Change Log
 
 2.5.4 [unreleased]
 
+  Fixed issue where c.p.a.FirstBy only accepted a single field name.
+
   Updated c.t.p.PartitionCollector in c.t.p.BasePartitionTap to be public.
 
 2.5.3
